--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,14 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	//spring sdata-jpa
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.4'
+	//mysql connector
+	implementation 'mysql:mysql-connector-java:8.0.31'    //mysql資料庫依賴
+	// swagger api
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
+	
+	//test通常是放在依賴裡的最下面
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
